src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Title_Desc_GLBL__c</fullName>
        <description>Title Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Title Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transparency_Reporting_Opt_Out_MERC__c</fullName>
        <description>Captures HCP consent to have their information included in Transparency Reports
Created by John A Adams 10/22/2013</description>
        <inlineHelpText>HCP is not consenting to having their information included in Transparency Reports</inlineHelpText>
        <label>Transparency Reporting Consent</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trng_Acct_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Training Account Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Training Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trtry_Cd_GLBL__c</fullName>
        <description>Worked master data for territory. 26th Nov 2013.</description>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trtry_Desc_GLBL__c</fullName>
        <description>Mastered worker data from workforce for Territory. Oliver Dunford 26th Nov 2013.</description>
        <label>Territory Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilised_CAP_MERC__c</fullName>
        <description>Shows how much CAP has been utilised for the current year for each HCP. Oliver Dunford 7th Nov 2013.</description>
        <formula>IF (!ISBLANK(TEXT(Country_of_Residence_GLBL__c)), 
(Reserved_CAP_MERC__c +  Allocated_CAP_MERC__c +  Speaking_Paid_CAP_MERC__c +  Consulting_Project_Paid_CAP_MERC__c )  /  Annual_CAP_Limit_MERC__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilised CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Veeva_Organization_MERC__c</fullName>
        <description>Name of organization to map with Veeva
Created by John Adams 10/28/2013</description>
        <label>Veeva Organization</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Preference_Type_MERC__c</fullName>
        <description>Created to capture type of Venue. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <label>Venue Preference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compliance Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Meeting Venue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Voicemail_Phone_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>VoiceMail Phone Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voicemail_Phone_Nbr_GLBL__c</fullName>
        <description>Mastered Phone Number from Workforce. Oliver Dunford 26th Nov 2013.</description>
        <label>Voice Mail Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Whlslr_Cd_GLBL__c</fullName>
        <description>Wholesaler Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Wholesaler Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Cntry_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Work Country Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Country_Desc_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Work Country Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Cntry_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Work Phone Country Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Country_of_Residence_GLBL__c</columns>
        <columns>Annual_CAP_Limit_MERC__c</columns>
        <columns>Allocated_CAP_MERC__c</columns>
        <columns>Speaking_Paid_CAP_MERC__c</columns>
        <columns>Reserved_CAP_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Lilly_Affiliates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Addr_Line1_GLBL__c</columns>
        <columns>Primary_Addr_Line2_GLBL__c</columns>
        <columns>Primary_Addr_City_GLBL__c</columns>
        <columns>Primary_Address_Country_GLBL__c</columns>
        <columns>Primary_Pstl_Cd_Extnsn_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Lilly_Affiliate_Business_GLBL</value>
        </filters>
        <label>All Lilly Affiliates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Venues</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Venue_Preference_Type_MERC__c</columns>
        <columns>Last_Review_Date_MERC__c</columns>
        <columns>Primary_Addr_Line1_GLBL__c</columns>
        <columns>Primary_Addr_Line2_GLBL__c</columns>
        <columns>Primary_Addr_City_GLBL__c</columns>
        <columns>Primary_Address_Country_GLBL__c</columns>
        <columns>Justification_for_Preferred_Venue_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Venue_GLBL</value>
        </filters>
        <label>All Venues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HCP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Country_of_Residence_GLBL__c</columns>
        <columns>Annual_CAP_Limit_MERC__c</columns>
        <columns>Allocated_CAP_MERC__c</columns>
        <columns>Speaking_Paid_CAP_MERC__c</columns>
        <columns>Reserved_CAP_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.HCP_GLBL</value>
        </filters>
        <label>HCP Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RTI</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Mercury_External_Id_MERC__c</columns>
        <columns>RTI_Transaction_ID_MERC__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RTI_Transaction_ID_MERC__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>RTI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SAP_Test_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country_Code_MERC__c</columns>
        <columns>Country_of_Residence_GLBL__c</columns>
        <columns>Service_Provider_Tier_MERC__c</columns>
        <columns>Primary_Address_Country_GLBL__c</columns>
        <columns>Prim_Affil_Addr_Country_GLBL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>sap</value>
        </filters>
        <label>SAP Test Accounts</label>
        <language>en_US</language>
    </listViews>
    <namedFilters>
        <fullName>Account_00N11000000SwsqEAC</fullName>
        <active>true</active>
        <field>Account.Relationship_Owner_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_Relationship Owner2</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjwmEAC_00N11000000SoJnEAK</fullName>
        <active>true</active>
        <field>Meeting_MERC__c.Sales_Rep_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting_Sales Rep</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjwmEAC_00N11000000T5hSEAS</fullName>
        <active>true</active>
        <field>Meeting_MERC__c.HCO_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Health Care Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting_HCO</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjwmEAC_00N11000000TFuMEAW</fullName>
        <active>true</active>
        <field>Meeting_MERC__c.Venue_MERC__c</field>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Venue</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting_Venue</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000Cjx1EAC_00N11000000SbagEAC</fullName>
        <active>true</active>
        <field>Team_Member_MERC__c.Account_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Team Member_External User</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjxfEAC_00N11000000T0zREAS</fullName>
        <active>true</active>
        <field>Invoice_MERC__c.HCO_Beneficiary_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Health Care Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Invoice_Health Care Organization</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjxfEAC_00N11000000TQdMEAW</fullName>
        <active>true</active>
        <field>Invoice_MERC__c.Lilly_Affiliate_MERC__c</field>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>Lilly</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Invoice_Lilly Affiliate</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CjxpEAC_00N11000000SbwOEAS</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <field>Meeting_Participant_MERC__c.Account_MERC__c</field>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>HCP</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Non-HCP</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting Participant_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000Ck6cEAC_00N11000000TYIWEA4</fullName>
        <active>true</active>
        <field>HCP_Contract_MERC__c.Lilly_Internal_Signee_MERC__c</field>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <infoMessage>If you cannot find the Employee you&apos;re looking for.  Select the &quot;All Fields&quot; option to search across additional criteria.</infoMessage>
        <isOptional>false</isOptional>
        <name>HCP Contract_Lilly Internal Signee</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I11000000CkBhEAK_00N11000000Sf1fEAC</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <field>Meeting_Vendor_MERC__c.Account_MERC__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Third Party Organization</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Venue</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Meeting Vendor_Account</name>
    </namedFilters>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Created to enable Person Accounts - TBD</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Care_Organization_GLBL</fullName>
        <active>true</active>
        <description>Health Care Organization</description>
        <label>Health Care Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lilly_Affiliate_Business_GLBL</fullName>
        <active>true</active>
        <description>Lilly Affiliate Business</description>
        <label>Lilly Affiliate Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Planning_Company_GLBL</fullName>
        <active>false</active>
        <description>Meeting Planning organization</description>
        <label>Meeting Planning Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party_Organization_GLBL</fullName>
        <active>true</active>
        <description>Meeting Logistics Provider</description>
        <label>Third Party Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_GLBL</fullName>
        <active>true</active>
        <description>Vendor for Meeting Services</description>
        <label>Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Venue_GLBL</fullName>
        <active>true</active>
        <description>Location of Meeting</description>
        <label>Venue</label>
    </recordTypes>
    <validationRules>
        <fullName>Confirm_Tier_1_HCP_CV_MERC</fullName>
        <active>true</active>
        <description>Prevents toggling the Tier 1 HCP CV Check picklist unless the HCP is a Tier 1 and needs to have their CV validated to set the Service Provider Tier.</description>
        <errorConditionFormula>ISCHANGED(Tier_1_HCP_CV_Checked_MERC__c) &amp;&amp; (Tier_1_Score_MERC__c &lt;= 5 || Tier_2_Score_MERC__c &lt;= 5)  &amp;&amp; 
(
	ISPICKVAL( Tier_1_HCP_CV_Checked_MERC__c , &quot;Confirmed HCP is Tier 1&quot;) || 
	ISPICKVAL( Tier_1_HCP_CV_Checked_MERC__c , &quot;HCP is NOT Tier 1&quot;)
)</errorConditionFormula>
        <errorDisplayField>Tier_1_HCP_CV_Checked_MERC__c</errorDisplayField>
        <errorMessage>You cannot update the Tier 1 HCP CV Checked field unless the HCP Tier 1 Criteria are met and therefore the HCP is eligible to be a Tier 1 HCP.  Set this value back to blank to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Service_Provider_Tier_Value_MERC</fullName>
        <active>true</active>
        <description>Validate that the Service Provider Tier is either blank or values between 1 and 5.  Created 01/09/2014 by KLorenti, Mavens Consulting</description>
        <errorConditionFormula>ISCHANGED(Service_Provider_Tier_MERC__c) &amp;&amp;
(Service_Provider_Tier_MERC__c &lt; 1.0 ||
Service_Provider_Tier_MERC__c &gt; 5.0)</errorConditionFormula>
        <errorDisplayField>Service_Provider_Tier_MERC__c</errorDisplayField>
        <errorMessage>The Service Provider Tier must be blank or between values 1 and 5.</errorMessage>
    </validationRules>
</CustomObject>